# genai-kagglegoogle-5d

./: README (14).md  README.md.md  design_fa.md  design_v2.md  gitignore.txt  requirements_fa.md  requirements_v2.md  tasks_detailed_v2.md  tasks_fa.md
budget_agent/: main.py  pyproject.toml  schemas.py
budget_agent/tests/: test_budget_tool.py
financial_analysis_agent/: logging.py  main.py  pyproject.toml  schemas.py
financial_analysis_agent/clients/: alpha_vantage.py  data_provider.py  data_provider_factory.py  yahoo_finance.py
financial_analysis_agent/services/: financial_data_service.py  portfolio_service.py
financial_analysis_agent/tests/: test_alpha_vantage_client.py  test_financial_analysis_endpoints.py  test_financial_data_service.py  test_yahoo_finance_client.py
financial_analysis_agent/utils/: cache.py
orchestrator/: Dockerfile  clients.py  gemini.py  main.py  prompts.py  pyproject.toml  session.py
scripts/: deploy_budget_agent.sh  deploy_financial_analysis_agent.sh  deploy_orchestrator.sh
